k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2 # เริ่มต้นที่ 2 Pods เพื่อช่วยกระจายโหลด
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 207717182806.dkr.ecr.ap-southeast-2.amazonaws.com/cloud-backend:latest
          imagePullPolicy: Always # บังคับให้ดึง Image ใหม่ทุกครั้งที่ Restart
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
