k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:      # <--- ต้องมี spec นี้ก่อน containers
      containers:
        - name: frontend
          image: 207717182806.dkr.ecr.ap-southeast-2.amazonaws.com/cloud-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
