k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80         # พอร์ตหน้าบ้านที่คนใช้งาน (http://.../)
      targetPort: 5000 # พอร์ตหลังบ้านที่แอปเราเปิดอยู่ (ต้องตรงกับ Code)
